# fpga2024

./: .gitignore
docs/: .gitignore  tools.md
docs/design/: mip-cache-multi.json  mip-cache-wave.json  mip-cache.md  mip-calc-ch.json  mip-system.drawio  mip-vram-wave.json
docs/notes/: README.md  radon.md  rendering.md  resource.md
docs/repo/: repo.md
docs/repo/codes&verilator/: mip-hdl.scala  mip-software.cpp  vr.cpp
hdl/: .clang-format  .gitignore  .tb-template.cpp  Makefile  README.md
hdl/chisel-project/: .gitignore  .scalafmt.conf  Makefile  README.md
hdl/chisel-project/src/main/scala/: generator.scala  params.scala  structs.scala
hdl/chisel-project/src/main/scala/cache/mip/: cache-block.scala  cache-utils.scala  mip-cache-system.scala
hdl/chisel-project/src/main/scala/math/: mat-mul.scala
hdl/chisel-project/src/main/scala/mip/: configs.scala  mip-system.scala
hdl/chisel-project/src/main/scala/mip/sys/: MipSys.scala  ctrlreg.scala  mip-system.scala
hdl/chisel-project/src/main/scala/mip/sys/deserted/: MipSystem.scala
hdl/chisel-project/src/main/scala/mip/tests/: vram-test.scala
hdl/chisel-project/src/main/scala/mip/tests/Vram/: VramTb.scala
hdl/chisel-project/src/main/scala/mip/units/: VramUnit.scala  mip-calc-channel.scala  mip-data-fetcher.scala  vram.scala
hdl/chisel-project/src/main/scala/mip/xilinx/: axi.scala  fifos.scala  ram.scala
hdl/chisel-project/src/main/scala/mip/xilinx/sim/: datamover.scala
hdl/chisel-project/src/main/scala/rendering/: IPs.scala  compute-unit.scala  mip-cache.scala  mip-control.scala  mip-core.scala  render-core.scala
hdl/chisel-project/src/main/scala/utils/: pipeline-reg.scala
hdl/chisel-project/xilinx/wrapper/: mipsyswrapper.v  uram.v
hdl/testbench/: CMakeLists.txt  README.md  filelist.mk  make.mk
hdl/testbench/fetcher/: Makefile  MipDataFetcher.sv  axi_datamover_sim.sv  fifo.v  main.cpp  tb_fetcher.v
hdl/testbench/mipcore/: Makefile  dpi-interface.cpp  main.cpp  tb_mipcore.v
hdl/testbench/vram/: Makefile  main.cpp  uram.v  vram-tb.v
proj/: .gitignore  Makefile  medical_sys.xsa
proj/devicetree/: pcw.dtsi  pl.dtsi  system-top.dts
proj/dts/: Makefile  user-modified.dts
sw/: read_dcm.py
sw/apptest/: .gitignore  CMakeLists.txt  Makefile
sw/apptest/src/: main.cpp  transform.cpp
sw/apptest/src/arch/: mem.cpp
sw/apptest/src/include/: arch.h  info.h
sw/sdl/: CMakeLists.txt  main.cpp
sw/sdl/inc/: app.h  cam.h  dev.h
sw/sdl/src/: app.cpp  dev.cpp
sw/volren/: download_png.py  loader.py  renderer.py  sample_test.py  sampler.py  showfig.py  texture_sampler.cpp  utils.py
sw/volren/cpp/: .clang-format  .gitignore  CMakeLists.txt  Makefile
sw/volren/cpp/include/: array.h  config.h  image.h  vector.h
sw/volren/cpp/src/: main.cpp
sw/volren/cpp/src/render/: algebra.cpp  render-main.cpp
sw/volren/cpp/src/structs/: image-stack.cpp  vector.cpp
sw/volren/cpp/src/utils/: load_image.cpp
